Small fixes: break too long words in review boxes, show 403 page even when not authenticated

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -370,4 +370,6 @@ nav#nav-pagination-links {
     width: 1px;
 }
 
-
+.review-user-info {
+    overflow-wrap: break-word;
+}
